--- a/adminLTELab/polls/templates/polls/index.html
+++ b/adminLTELab/polls/templates/polls/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% load static %}
-  {% block content %}
+
+{% block content %}
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -8,12 +8,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Blank Page</h1>
+            <h1>Polls</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Blank Page</li>
+              <li class="breadcrumb-item active">polls</li>
             </ol>
           </div>
         </div>
@@ -26,7 +26,7 @@
       <!-- Default box -->
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">Title</h3>
+          <h3 class="card-title">poll list</h3>
 
           <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -36,7 +36,15 @@
           </div>
         </div>
         <div class="card-body">
-          Start creating your amazing application!
+          {% if latest_question_list %}
+          <ul>
+            {% for question in latest_question_list %}
+              <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+            {% endfor %}
+          </ul>
+          {% else %}
+            <p>No polls are available.</p>
+          {% endif %}
         </div>
         <!-- /.card-body -->
         <div class="card-footer">
@@ -50,5 +58,4 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-{% endblock %}
-
+{% endblock content %}
